process index.md to index.html

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,7 +9,7 @@ author.github = jasonqu
 author.twitter = username
 author.feedburner = feedname
 
-rootPath = "blog"
+rootPath = ""
 production_url = "http://username.github.io"
 
 # generator parameters
