flat theme, still in process

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,8 +9,13 @@ author.github = jasonqu
 author.twitter = username
 author.feedburner = feedname
 
-rootPath = ""
+rootPath = "blog"
 production_url = "http://username.github.io"
+
+// images
+site_image = "images/blog.png"
+index_cover = "images/cover.jpg"
+post_cover = "" // if not exist, could be set to empty String
 
 # generator parameters
 generate_dir = src/site
