customize css failed

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,11 +11,19 @@ author.feedburner = feedname
 
 rootPath = "blog"
 production_url = "http://username.github.io"
+// posts per page. If it is less than 0, no pagenation is generated; else would be set with a minmum value of 10.
+posts_per_page = 10
 
 // images
 site_image = "images/blog.png"
 index_cover = "images/cover.jpg"
 post_cover = "" // if not exist, could be set to empty String
+
+theme = "default" // bootflat or default
+
+navbar : [
+  {name : "bootlog", url : "https://github.com/jasonqu/bootlog"}
+]
 
 # generator parameters
 generate_dir = src/site
