--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,29 +1,35 @@
 # site parameters
-site.title = bootstrap blog with twirl
-site.tagline = a twirl example for jekyll-bootstrap
-site.description = hello world
+site.title = Bootlog Demo
+site.tagline = a static site generator for scala users
+site.description = "a static site generator powered by sbt, twirl, bootstrap and bootflat"
 
-author.name = jasonqu
-author.email = "qiuguo0205@gmail.com"
-author.github = jasonqu
+author.name = myname
+author.email = "my email"
+author.github = githubname
 author.twitter = username
 author.feedburner = feedname
 
+# the subdomain where the site would be placed
 rootPath = "blog"
+# the home url where the site would be placed
 production_url = "http://username.github.io"
-// posts per page. If it is less than 0, no pagenation is generated; else would be set with a minmum value of 10.
-posts_per_page = 10
 
+# generator parameters
+generate_dir = src/site
+
+// the site's theme: bootflat or default
+theme = "default"
+
+// the setting below are used by bootflat theme
 // images
 site_image = "images/blog.png"
 index_cover = "images/cover.jpg"
 post_cover = "" // if not exist, could be set to empty String
 
-theme = "default" // bootflat or default
+// posts per page. it will be set with a minmum value of 10.
+posts_per_page = 10
 
-navbar : [
-  {name : "bootlog", url : "https://github.com/jasonqu/bootlog"}
-]
-
-# generator parameters
-generate_dir = src/site
+// configuable navbar
+//navbar : [
+//  {name : "bootlog", url : "https://github.com/jasonqu/bootlog"}
+//]
