--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,7 +10,7 @@ author.twitter = username
 author.feedburner = feedname
 
 # the subdomain where the site would be placed
-rootPath = "blog"
+rootPath = "bootlogDemo"
 # the home url where the site would be placed
 production_url = "http://username.github.io"
 
@@ -30,6 +30,6 @@ post_cover = "" // if not exist, could be set to empty String
 posts_per_page = 10
 
 // configuable navbar
-//navbar : [
-//  {name : "bootlog", url : "https://github.com/jasonqu/bootlog"}
-//]
+extra_nav_list : [
+  {name : "bootlog", url : "https://github.com/jasonqu/bootlog"}
+]
