--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,4 +1,5 @@
 # site parameters
+# site's title, displayed in navbar
 site.title = Bootlog Demo
 site.tagline = a static site generator for scala users
 site.description = "a static site generator powered by sbt, twirl, bootstrap and bootflat"
@@ -9,10 +10,10 @@ author.github = githubname
 author.twitter = username
 author.feedburner = feedname
 
-# the subdomain where the site would be placed
+# the path where the site would be placed
 rootPath = "bootlogDemo"
 # the home url where the site would be placed
-production_url = "http://username.github.io"
+production_url = "http://jasonqu.github.io"
 
 # generator parameters
 generate_dir = src/site
@@ -29,7 +30,7 @@ post_cover = "" // if not exist, could be set to empty String
 // posts per page. it will be set with a minmum value of 10.
 posts_per_page = 10
 
-// configuable navbar
+# configuable navbar, uncomment the following lines and check out the navbar
 extra_nav_list : [
-  {name : "bootlog", url : "https://github.com/jasonqu/bootlog"}
+//  {name : "bootlog", url : "https://github.com/jasonqu/bootlog"}
 ]
